--- a/index.html
+++ b/index.html
@@ -17,20 +17,33 @@
 
     <Section id="skipdiet">
         <div class="skipdiet-half">
+            <br><br><br>
             <h1> <span>Skip</span> The Died,</h1>
             <h1>Just Eat Healthy</h1>
             <h1>With Food Network</h1>
             <p>
                 Imagine you don't need a diet because we provide
                 healthy and delicious food for you!
-            </p><br>
-            <a>Order Food</a>
+            </p><br><br>
+            <a href="">Order Food</a>
         </div>
         <div class="skipdiet-half">
             <img src="/images/female/Group 8425.png" alt="">
         </div>
     </Section>
-
+    <section id="aboutme">
+        <div class="aboutme-half">
+            <img src="/images/female/Person Image.png" alt="">
+        </div>
+        <div class="aboutme-half">
+            <br><br><br>
+            <h2>About Me</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, nobis! Fuga voluptas voluptate sit
+                ducimus facilis, aliquid ut ab in hic obcaecati eius exercitationem esse facere dignissimos dolores
+                impedit magni non nostrum vitae quis tempore ullam qui neque nihil! Voluptates.</p><br><br>
+            <a href="">Contact Me</a>
+        </div>
+    </section>
 
 </body>
 
