complete about me

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <title>food-network</title>
 </head>
 
 <body>
-    <!-- start header -->
+    <!-- start Lower-header -->
 
     <Section id="skipdiet">
         <div class="skipdiet-half">
@@ -24,26 +27,36 @@
             <p>
                 Imagine you don't need a diet because we provide
                 healthy and delicious food for you!
-            </p><br><br>
-            <a href="">Order Food</a>
+            <div class="button"> <a href="">Order Food</a></div>
+
         </div>
         <div class="skipdiet-half">
             <img src="/images/female/Group 8425.png" alt="">
         </div>
     </Section>
+
+    <!-- end-Lower_header -->
+
+    <!-- Start-About_me -->
+
     <section id="aboutme">
         <div class="aboutme-half">
             <img src="/images/female/Person Image.png" alt="">
         </div>
         <div class="aboutme-half">
-            <br><br><br>
+            <br><br><br><br>
             <h2>About Me</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, nobis! Fuga voluptas voluptate sit
                 ducimus facilis, aliquid ut ab in hic obcaecati eius exercitationem esse facere dignissimos dolores
-                impedit magni non nostrum vitae quis tempore ullam qui neque nihil! Voluptates.</p><br><br>
-            <a href="">Contact Me</a>
+                impedit magni non nostrum vitae quis tempore ullam qui neque nihil! Voluptates.</p>
+            <div class="button">
+                <a target="_blank" href="https://www.linkedin.com/in/martufa-hafiz-352b9418a/">Contact Me</a>
+            </div>
+
         </div>
     </section>
+    <!-- End-About-me -->
+
 
 </body>
 
