--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <!-- start Lower-header -->
 
     <Section id="skipdiet">
-        <div class="skipdiet-half">
-            <br><br><br>
+        <div class="skipdiet-half"><br><br><br>
             <h1> <span>Skip</span> The Died,</h1>
             <h1>Just Eat Healthy</h1>
             <h1>With Food Network</h1>
@@ -44,7 +43,6 @@
             <img src="/images/female/Person Image.png" alt="">
         </div>
         <div class="aboutme-half">
-            <br><br><br><br>
             <h2>About Me</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, nobis! Fuga voluptas voluptate sit
                 ducimus facilis, aliquid ut ab in hic obcaecati eius exercitationem esse facere dignissimos dolores
