--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- start Lower-header -->
 
     <Section id="skipdiet">
-        <div class="skipdiet-half"><br><br><br>
+        <div class="half"><br><br><br>
             <h1> <span>Skip</span> The Died,</h1>
             <h1>Just Eat Healthy</h1>
             <h1>With Food Network</h1>
@@ -29,7 +29,7 @@
             <div class="button"> <a href="">Order Food</a></div>
 
         </div>
-        <div class="skipdiet-half">
+        <div class="half">
             <img src="/images/female/Group 8425.png" alt="">
         </div>
     </Section>
@@ -39,10 +39,10 @@
     <!-- Start-About_me -->
 
     <section id="aboutme">
-        <div class="aboutme-half">
+        <div class="half">
             <img src="/images/female/Person Image.png" alt="">
         </div>
-        <div class="aboutme-half">
+        <div class="half">
             <h2>About Me</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, nobis! Fuga voluptas voluptate sit
                 ducimus facilis, aliquid ut ab in hic obcaecati eius exercitationem esse facere dignissimos dolores
@@ -55,6 +55,25 @@
     </section>
     <!-- End-About-me -->
 
+    <!-- start recipies part -->
+    <div class="recipies">
+        <h2>My Recipies</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, porro amet! Eligendi dolor nisi
+            doloribus qui eum, modi quidem mollitia voluptates! Porro incidunt quis et voluptatem molestiae omnis, enim
+            modi.</p>
+        <div class="recipies-part">
+
+        </div>
+
+        <div class="recipies-part">
+
+        </div>
+
+        <div class="recipies-part">
+
+        </div>
+
+    </div>
 
 </body>
 
