--- a/index.html
+++ b/index.html
@@ -56,24 +56,40 @@
     <!-- End-About-me -->
 
     <!-- start recipies part -->
-    <div class="recipies">
+    <section id="recipies-section">
         <h2>My Recipies</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, porro amet! Eligendi dolor nisi
             doloribus qui eum, modi quidem mollitia voluptates! Porro incidunt quis et voluptatem molestiae omnis, enim
             modi.</p>
-        <div class="recipies-part">
 
-        </div>
+        <div class="all-recipies">
+            <div class="one-recipie">
+                <img src="/images/food/Project Cover.jpg" alt="">
+                <H3>recipie Title</H3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, vero?.</p>
+                <div class="recipie-button"><a href="">Order Now</a> </div>
 
-        <div class="recipies-part">
+            </div>
 
-        </div>
+            <div class="one-recipie">
+                <img src="/images/food/Project Cover.png" alt="">
+                <H3>recipie Title</H3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, vero?.</p>
+                <div class="recipie-button"><a href="">Order Now</a> </div>
 
-        <div class="recipies-part">
+            </div>
 
-        </div>
+            <div class="one-recipie">
+                <img src="/images/food/Project Cover1.jpg" alt="">
+                <H3>recipie Title</H3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, vero?.</p>
+                <div class="recipie-button"><a href="">Order Now</a> </div>
 
-    </div>
+            </div>
+
+    </section>
+
+    <!-- footer start -->
 
 </body>
 
