--- a/index.html
+++ b/index.html
@@ -90,7 +90,12 @@
     </section>
 
     <!-- footer start -->
-
+    <section class="footer">
+        <div class="footer-content">
+            <h2><span>FOOD </span> NETWORK</h2>
+            <p>Eat healthy to live healthy. Live healthy to live happy</p>
+        </div>
+    </section>
 </body>
 
 </html>
