--- a/index.html
+++ b/index.html
@@ -15,9 +15,24 @@
     <title>food-network</title>
 </head>
 
-<body>
-    <!-- start Lower-header -->
 
+<body>
+    <!-- start-header -->
+    <section class="menu">
+        <nav class="nav-elements">
+            <h1><span>Food</span> Network</h1>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Recipies</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </section>
+    <!-- end-header -->
+    <!-- start Lower-header -->
     <Section id="skipdiet">
         <div class="half"><br><br><br>
             <h1> <span>Skip</span> The Died,</h1>
@@ -61,34 +76,44 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, porro amet! Eligendi dolor nisi
             doloribus qui eum, modi quidem mollitia voluptates! Porro incidunt quis et voluptatem molestiae omnis, enim
             modi.</p>
-
         <div class="all-recipies">
             <div class="one-recipie">
                 <img src="/images/food/Project Cover.jpg" alt="">
                 <H3>recipie Title</H3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, vero?.</p>
                 <div class="recipie-button"><a href="">Order Now</a> </div>
-
             </div>
-
             <div class="one-recipie">
                 <img src="/images/food/Project Cover.png" alt="">
                 <H3>recipie Title</H3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, vero?.</p>
                 <div class="recipie-button"><a href="">Order Now</a> </div>
-
             </div>
-
             <div class="one-recipie">
                 <img src="/images/food/Project Cover1.jpg" alt="">
                 <H3>recipie Title</H3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, vero?.</p>
                 <div class="recipie-button"><a href="">Order Now</a> </div>
-
             </div>
-
     </section>
-
+    <!-- end-recipie-part -->
+    <!-- start-aboutme -->
+    <section class="contact">
+        <div class="contact-child">
+            <h1><Span>Email</Span> us</h1>
+            <div class="form-elements">
+                <input type="email" placeholder="Your email">
+            </div>
+            <div class="form-elements">
+                <input type="text" placeholder="Subject">
+            </div>
+            <div class="form-elements" id="message-form">
+                <textarea name="" id="" cols="36" rows="7" placeholder="Write your message"></textarea>
+            </div>
+            <input class="btn" type="button" name="" value="Submit">
+        </div>
+    </section>
+    <!-- end aboutme -->
     <!-- footer start -->
     <section class="footer">
         <div class="footer-content">
@@ -96,6 +121,7 @@
             <p>Eat healthy to live healthy. Live healthy to live happy</p>
         </div>
     </section>
+    <!-- end footer -->
 </body>
 
 </html>
